--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,36 @@
     background-color: #ffffff;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='50' height='40' viewBox='0 0 50 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23020b27' fill-opacity='0.14'%3E%3Cpath d='M40 10L36.67 0h-2.11l3.33 10H20l-2.28 6.84L12.11 0H10l6.67 20H10l-2.28 6.84L2.11 10 5.44 0h-2.1L0 10l6.67 20-3.34 10h2.11l2.28-6.84L10 40h20l2.28-6.84L34.56 40h2.1l-3.33-10H40l2.28-6.84L47.89 40H50l-6.67-20L50 0h-2.1l-5.62 16.84L40 10zm1.23 10l-2.28-6.84L34 28h4.56l2.67-8zm-10.67 8l-2-6h-9.12l2 6h9.12zm-12.84-4.84L12.77 38h15.79l2.67-8H20l-2.28-6.84zM18.77 20H30l2.28 6.84L37.23 12H21.44l-2.67 8zm-7.33 2H16l-4.95 14.84L8.77 30l2.67-8z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   }
+
+  .logo {
+    color: #ABB1F7; 
+    /* Sets the text color */
+  }
+
+  .card {
+ width: 400px;
+ height: 45px;
+ background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+ border-radius: 20px;
+ transition: all .3s;
+}
+
+.card2 {
+ width:  400px;
+ height: 45px;
+ background-color: #1a1a1a;
+ color: white;
+ 
+ transition: all .2s;
+}
+
+.card2:hover {
+ transform: scale(0.96);
+
+ border-radius: 20px;
+}
+
+.card:hover {
+  transform: scale(1.2);
+  box-shadow: 0px 0px 15px 0px rgba(0, 255, 117, 0.30);
+}
